# mantra

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: black.yaml  check_coding_style.yaml  check_ruff_merge.yaml  create_docs.yaml  create_manifold_release.yaml  create_manifolds_release.yaml  create_release.yaml  dataset_release.yaml  docs.yaml  publish_to_pypi.yaml  pylint.yaml  pypi.yaml  release.yaml  run_tests.yaml
dataprocessing/: process.py  process_manifolds.py  simplicial.py  upload.py
docs/: contribute.md  index.md  installation.md
docs/notebooks/: adding_new_task.md  train_gnn.md  visualize_data.md
docs/source/: conf.py  datasets.rst  index.rst  licence.rst  readme.rst  transforms.rst
docs/source/notebooks/: adding_new_task.ipynb  train_gnn.ipynb
examples/: adding_new_task.ipynb  getting_started.ipynb  train_gnn.ipynb  visualize_data.ipynb
mantra/: __init__.py  configs.py  datasets.py  deduplication.py  generate_subdivided_datasets.py  lex_to_json.py  manifold_types.py  pyproject.toml  realize_2d_triangulation.py  set_property.py  simplicial.py  subdivision.py
mantra/augmentations/: __init__.py  balancing.py  base.py  constants.py  triangulation.py  triangulation_2d.py  triangulation_3d.py
mantra/conversions/: __init__.py  dual_graph.py
mantra/datasets/: __init__.py  base.py  cy.py  datasets_pairwise.py  factory.py  homeo_pred.py  mantra.py  mantra_divided.py  pairwise.py  prop_pred.py  property_prediction.py  subdivided.py  utils.py
mantra/factory/: __init__.py  builder.py  config.py  presets.py
mantra/mantra/: simplicial.py
mantra/representations/: __init__.py  dual_graph.py  hasse_diagram.py  levi_graph.py  one_skeleton.py  reduced_hasse_diagram.py  simplex.py  simplex_trie.py  simplicial_connectivity.py
mantra/representations/internal/: __init__.py  simplex.py  simplex_trie.py
mantra/tasks/: task_types.py
mantra/transforms/: __init__.py  attribute_transform.py  coordinate_embedding.py  create_labels.py  effective_resistance.py  equivariant_moment_curve_encoding.py  moment_curve_embedding.py  scalar_features.py  select_attributes.py  select_embedding.py  select_features.py  structural_transforms.py  task_transforms.py  util_transforms.py
mantra/utils/: generate_subdivided_datasets.py  utils.py
scripts/: calculate_statistics.py  compare_triangulations.sh  convert_manifolds.sh  copy_notebooks.sh  generate_balanced.py  release_pypi.sh  to_zenodo.py
test/: conftest.py  test_attribute_transform.py  test_augmentation_base.py  test_augmentation_invariants.py  test_balancing.py  test_convex_prop.py  test_create_labels.py  test_datasets_cy.py  test_datasets_homeo_pred.py  test_datasets_mantra.py  test_datasets_pairwise.py  test_datasets_utils.py  test_deduplication.py  test_dual_graph.py  test_effective_resistance.py  test_factory.py  test_generate_subdivided_datasets.py  test_hasse_diagram.py  test_index_2_transforms.py  test_index_transforms.py  test_levi_graph.py  test_levi_graph_2.py  test_lex_to_json.py  test_manifold_types.py  test_mantra_divided.py  test_moment_curve.py  test_one_skeleton.py  test_pachner_2d.py  test_pachner_3d.py  test_representations.py  test_simplex.py  test_simplex_trie.py  test_simplicial_connectivity.py  test_sphere_connectivity.py  test_sphere_pipeline.py  test_structural_transforms.py  test_subdivided_dataset.py  test_subdivision.py  test_subdivision_moves.py  test_task_transforms.py  (+3 more)
