[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mantra"]

[project]
name = "mantra-dataset"
version = "0.0.0"
dependencies = [
    "numpy",
    "torch",
    "torch_geometric"
]
requires-python = ">=3.8"
authors = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
  {name = "Bastian Rieck", email = "bastian.rieck@helmholtz-munich.de"},
]
maintainers = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
]
description = "A package for working with higher-order datasets like manifold triangulations."
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = [
  "topology",
  "deep learning",
  "tda",
  "tdl",
  "topological data analysis",
  "topological deep learning"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
