[build-system]
requires = ["setuptools >= 61.0","setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"

[tool.pylint.main]
load-plugins = "pylint_actions"

[tool.setuptools]
packages = ["mantra"]

[project]
dynamic = ["version"]
name = "mantra-dataset"
dependencies = [
  "black>=22.0",
  "ruff>=0.14.06",
  "numpy",
  "torch",
  "torch_geometric",
]
requires-python = ">=3.8"
authors = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
  {name = "Bastian Rieck", email = "bastian.rieck@helmholtz-munich.de"},
]
maintainers = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
]
description = "A package for working with higher-order datasets like manifold triangulations."
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = [
  "topology",
  "deep learning",
  "tda",
  "tdl",
  "topological machine learning",
  "topological data analysis",
  "topological deep learning"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
documentation = "https://aidos.group/mantra/"
repository = "https://github.com/aidos-lab/mantra"
issues = "https://github.com/aidos-lab/mantra/issues"
changelog = "https://github.com/aidos-lab/mantra/blob/main/CHANGELOG.md"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.black]
line-length = 79
